# nbabot

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  pyproject.toml
agents/: daily-edge-finder.md
docs/: AI_POLICY.md  AI_RUNBOOK.md  GAME_POSITION_GROUP_ROADMAP.md
launchd/: com.nbabot.ordermgr.plist  com.nbabot.scheduler.plist  com.nbabot.watchdog.plist
scripts/: _refetch_and_analyze.sh  agent1_position_architecture.py  agent2_payoff_structure.py  agent3_multi_market.py  agent4_sizing_risk.py  analyze_lhtsports.py  analyze_lhtsports_full.py  analyze_lhtsports_v2.py  analyze_merge_timing.py  analyze_pnl.py  analyze_sovereign_bothside.py  analyze_sovereign_edge_dca.py  analyze_sovereign_market_timing.py  analyze_trader.py  check_balance.py  check_connections.py  compare_traders.py  cron_ordermgr.sh  cron_scan.sh  cron_schedule.sh  deep_dive_sovereign.py  discover_traders.py  fetch_lhtsports_activity.py  fetch_lhtsports_trades.py  fetch_trader.py  install_launchd.sh  investigate_no_signal_and_losses.py  investigate_win_negative_pnl.py  optimize_hedge_ratio.py  order_tick.py  pre_live_check.sh  pre_practice_gate.py  rebuild_calibration_and_backtest.py  report_pnl.py  report_position_groups.py  reverse_engineer_rules.py  run_position_group_backtest.py  scan.py  schedule_trades.py  settle.py  (+4 more)
src/: config.py  logging_config.py
tests/: conftest.py  helpers.py  test_bothside_db.py  test_bothside_scheduler.py  test_bothside_settle.py  test_bothside_target.py  test_calc_signal_pnl.py  test_calibration.py  test_calibration_bothside.py  test_calibration_builder.py  (+50 more)
(+51 files in other folders)
