[project]
name = "nbabot"
version = "0.1.0"
description = "Polymarket NBA calibration-based mispricing bot"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.34.5",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "python-telegram-bot>=21.0",
    "web3>=6.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
